# twitch-right-now

./: .gitignore  Cargo.toml
axum-server/: Cargo.toml
axum-server/src/: index.html  main.rs
emote-urls/: 7tv-urls.txt  emote-urls.txt
src/: get-7tv-urls.rs  get-emote-urls.rs  index.html  main.rs
websocket-server/: Cargo.toml
websocket-server/src/: emotes.txt  main.rs
