[package]
name = "twitch-right-now"
version = "0.1.0"
edition = "2021"
default-run = "twitch-right-now"

[[bin]]
name = "get-emote-urls"
path = "src/get-emote-urls.rs"

[dependencies]
axum = { version = "0.6.1", features = ["ws"] }
fantoccini = "0.19.3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twitch-irc = "5.0.0"
