[package]
name = "websocket-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio = { version = "1.24.1", features = ["rt-multi-thread"]}
tungstenite = "0.18.0"
twitch-irc = "5.0.0"
